--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.0",
+    "firebase": "^10.5.2",
     "jotai": "^2.5.0",
     "next": "13.4.19",
     "react": "^18",
