--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.0",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
+    "axios": "^1.6.0",
+    "encoding": "^0.1.13",
     "firebase": "^10.5.2",
     "jotai": "^2.5.0",
     "next": "13.4.19",
