--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.17.0",
+    "@mui/x-date-pickers": "^6.17.0",
     "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
     "encoding": "^0.1.13",
     "firebase": "^10.5.2",
     "jotai": "^2.5.0",
