--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.17.0",
     "@mui/x-date-pickers": "^6.17.0",
+    "@react-google-maps/api": "^2.19.2",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
     "encoding": "^0.1.13",
@@ -28,6 +30,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.54.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
